# MicroMouse2017

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.md  Jenkinsfile  LICENSE.md  MAINTAINERS  README.md  WORKSPACE  main.c  main.cc  mainc.c
CAD/: 1mm Ball Caster Spacer.ipt  1mm Ball Caster Spacer.stl  40mm Ball Caster Spacer.ipt  40mm Ball Caster Spacer.stl  5mm Ball Caster Spacer.ipt  5mm Ball Caster Spacer.stl  Assembled Tall Chassis.iam  Ball Caster Spacer.ipt  Battery Plate.gcode  Battery Plate.ipt  Battery Plate.stl  Modular Chassis (Short).ipt  Modular Chassis (Short).stl  Modular Chassis (Tall).ipt  Modular Chassis (Tall).stl  Modular Chassis.ipt  Modular Chassis.stl  NEMA11 Mounting Bracket.ipt  NEMA11 Mounting Bracket.stl  NEMA14 Mounting Bracket.ipt  NEMA14 Mounting Bracket.stl  Sensor Shield Ball Caster Mount.ipt  Sensor Shield.gcode  Sensor Shield.ipt  Sensor Shield.stl  Standoff Supports.ipt  lockfile.lck
CAD/OldVersions/: 40mm Ball Caster Spacer.0003.ipt  Left Standoff Support.0001.ipt  Modular Chassis (Short).0027.ipt  Modular Chassis (Tall).0025.ipt  Modular Chassis.0007.ipt  Modular Chassis.0014.ipt  NEMA14 Mounting Bracket.0001.ipt  Sensor Shield.0067.ipt  Standoff Supports.0003.ipt
MicromouseFirmware/: MicromouseFirmware.sln
MicromouseFirmware/MicromouseFirmware/: MicromouseFirmware-Debug.vgdbsettings  MicromouseFirmware-Release.vgdbsettings  MicromouseFirmware.ioc  MicromouseFirmware.vcxproj  MicromouseFirmware.vcxproj.filters  stm32.props  stm32.xml
MicromouseFirmware/MicromouseFirmware/Inc/: main.h
cube/: master.ioc
firmware/: .mxproject  README.md  firmware.gpdsc  firmware.ioc  firmware.sdf  firmware.sln
firmware/Inc/: adc.h  main.h  sdmmc.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  tim.h  util.h
firmware/Src/: CMakeLists.txt  MicromouseFirmware.cpp  dma.c  main.c  sdmmc.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  system_stm32l4xx.c  util.cpp
firmware/Src/AL/: Robot.cpp
firmware/Src/Algo/maze/cell/: cell.cc
firmware/Src/Algo/maze/impl/: MazeImpl.cc
firmware/Src/Algo/robot/impl/: RobotImpl.cc
firmware/Src/Algo/util/: Location.cc  logger.cc
firmware/Src/PAL/: ADC.cpp  GPIO.cpp  I2C.cpp  TIM.cpp
firmware/Src/PHIL/: Distance.cpp  DriveSystem.cpp  IMU.cpp  Motor.cpp  Reflectance.cpp
firmware/firmware/: cpp_main.cpp  firmware-Debug.vgdbsettings  firmware-Release.vgdbsettings  firmware.gpdsc  firmware.ioc  firmware.vcxproj  firmware.vcxproj.filters  readme.txt
mazes/: maze1.txt  maze2.txt  maze3.txt  maze4.txt
mazes/MazeTest/: MazeGen.h  MazeGeneration.cc
qt/example1/: cell.cpp  cell.h  example1.pro  main.cpp  maze.txt  path_txt.txt  widget.cpp
src/: CMakeCache.txt
src/main/: CMakeLists.txt
(+183 files in other folders)
